docs/paper-trades/v5/2026-07-30_report.md
# v5 Paper Trading Report -- 2026-07-30

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs -513 (-0.05%)** |
| Trades | 56 (L:18 S:38) |
| Win Rate | 43% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | MAZDOCK | 2272.00 | 2293.20 | Rs -339 | STOPLOSS |
| 2 | SHORT | INTRADAY | JIOFIN | 245.96 | 247.31 | Rs -122 | STOPLOSS |
| 3 | SHORT | INTRADAY | IDFCFIRSTB | 83.77 | 84.42 | Rs -151 | STOPLOSS |
| 4 | SHORT | INTRADAY | SAIL | 169.00 | 169.85 | Rs -77 | STOPLOSS |
| 5 | SHORT | INTRADAY | LUPIN | 2419.60 | 2436.60 | Rs -85 | STOPLOSS |
| 6 | SHORT | INTRADAY | BANKBARODA | 240.75 | 242.15 | Rs -85 | STOPLOSS |
| 7 | SHORT | INTRADAY | MOTILALOFS | 840.45 | 846.40 | Rs -161 | STOPLOSS |
| 8 | SHORT | INTRADAY | KPITTECH | 589.80 | 597.25 | Rs -134 | STOPLOSS |
| 9 | SHORT | INTRADAY | LGEINDIA | 1500.10 | 1508.70 | Rs -69 | STOPLOSS |
| 10 | SHORT | INTRADAY | YESBANK | 22.63 | 22.58 | Rs +74 | FLAT_FORCE_EXIT |
| 11 | SHORT | INTRADAY | FEDERALBNK | 355.50 | 354.50 | Rs +82 | FLAT_FORCE_EXIT |
| 12 | SHORT | INTRADAY | NMDC | 85.18 | 84.95 | Rs +46 | FLAT_FORCE_EXIT |
| 13 | SHORT | INTRADAY | UPL | 601.90 | 602.20 | Rs -10 | FLAT_FORCE_EXIT |
| 14 | SHORT | INTRADAY | CGPOWER | 819.25 | 820.30 | Rs -22 | FLAT_FORCE_EXIT |
| 15 | SHORT | INTRADAY | CHOLAFIN | 1770.90 | 1766.70 | Rs +29 | FLAT_FORCE_EXIT |
| 16 | SHORT | INTRADAY | LUPIN | 2429.70 | 2430.30 | Rs -1 | FLAT_FORCE_EXIT |
| 17 | SHORT | INTRADAY | MCX | 2678.80 | 2674.30 | Rs +4 | FLAT_FORCE_EXIT |
| 18 | SHORT | INTRADAY | ENRIN | 3093.00 | 3113.00 | Rs -20 | STOPLOSS |
| 19 | SHORT | INTRADAY | LODHA | 1295.05 | 1295.75 | Rs -2 | FLAT_FORCE_EXIT |
| 20 | SHORT | INTRADAY | HINDPETRO | 388.95 | 388.35 | Rs +6 | FLAT_FORCE_EXIT |
| 21 | SHORT | INTRADAY | KPITTECH | 592.05 | 586.30 | Rs +34 | STOPLOSS |
| 22 | SHORT | INTRADAY | SHRIRAMFIN | 1021.00 | 1026.50 | Rs -33 | STOPLOSS |
| 23 | SHORT | INTRADAY | CHOLAFIN | 1763.40 | 1775.90 | Rs -38 | STOPLOSS |
| 24 | SHORT | INTRADAY | HDFCLIFE | 552.60 | 547.50 | Rs +235 | TIME_EXIT |
| 25 | SHORT | INTRADAY | SAIL | 168.90 | 169.24 | Rs -8 | TIME_EXIT |
| 26 | SHORT | INTRADAY | FEDERALBNK | 354.35 | 353.85 | Rs +12 | TIME_EXIT |
| 27 | SHORT | INTRADAY | LODHA | 1293.00 | 1287.05 | Rs +36 | TIME_EXIT |
| 28 | SHORT | INTRADAY | GMRAIRPORT | 104.33 | 104.00 | Rs +25 | TIME_EXIT |
| 29 | SHORT | INTRADAY | PREMIERENE | 982.50 | 984.90 | Rs -17 | TIME_EXIT |
| 30 | SHORT | INTRADAY | DLF | 656.15 | 654.65 | Rs +16 | TIME_EXIT |
| 31 | SHORT | INTRADAY | SRF | 2601.00 | 2603.80 | Rs -6 | TIME_EXIT |
| 32 | SHORT | INTRADAY | GLENMARK | 2209.90 | 2187.00 | Rs +69 | TIME_EXIT |
| 33 | SHORT | INTRADAY | TIINDIA | 2678.20 | 2688.60 | Rs -21 | TIME_EXIT |
| 34 | SHORT | INTRADAY | GODREJPROP | 2105.40 | 2109.90 | Rs -14 | TIME_EXIT |
| 35 | SHORT | INTRADAY | MCX | 2664.60 | 2677.00 | Rs -25 | TIME_EXIT |
| 36 | SHORT | INTRADAY | COLPAL | 2087.80 | 2084.00 | Rs +8 | TIME_EXIT |
| 37 | SHORT | INTRADAY | IDEA | 12.89 | 12.87 | Rs +10 | TIME_EXIT |
| 38 | SHORT | INTRADAY | PRESTIGE | 1600.60 | 1596.70 | Rs +12 | TIME_EXIT |
| 39 | LONG | SWING | EXIDEIND | 429.90 | 433.85 | Rs +99 | STOPLOSS |
| 40 | LONG | SWING | M&MFIN | 386.90 | 390.05 | Rs +54 | STOPLOSS |
| 41 | LONG | SWING | JIOFIN | 249.93 | 246.57 | Rs -77 | STOPLOSS |
| 42 | LONG | SWING | VBL | 446.00 | 451.20 | Rs +78 | STOPLOSS |
| 43 | LONG | SWING | RADICO | 4432.00 | 4464.80 | Rs +164 | SIGNAL_FLIP |
| 44 | LONG | SWING | RECLTD | 375.80 | 375.50 | Rs -11 | SIGNAL_FLIP |
| 45 | LONG | SWING | DIXON | 14444.00 | 14345.00 | Rs -99 | SIGNAL_FLIP |
| 46 | LONG | SWING | TATACONSUM | 1105.70 | 1101.90 | Rs -53 | SIGNAL_FLIP |
| 47 | LONG | SWING | ALKEM | 5747.50 | 5820.00 | Rs +145 | STOPLOSS |
| 48 | LONG | SWING | NESTLEIND | 1524.40 | 1517.60 | Rs -88 | SIGNAL_FLIP |
| 49 | LONG | SWING | KALYANKJIL | 627.45 | 642.05 | Rs +131 | STOPLOSS |
| 50 | LONG | SWING | GODFRYPHLP | 2074.00 | 2108.00 | Rs +68 | STOPLOSS |
| 51 | LONG | SWING | M&M | 3259.00 | 3259.10 | Rs +0 | SIGNAL_FLIP |
| 52 | LONG | SWING | GLENMARK | 2248.00 | 2218.00 | Rs -60 | STOPLOSS |
| 53 | LONG | SWING | TVSMOTOR | 4170.50 | 4167.30 | Rs -16 | SIGNAL_FLIP |
| 54 | LONG | SWING | GODFRYPHLP | 2124.70 | 2119.50 | Rs -16 | FLAT_FORCE_EXIT |
| 55 | LONG | SWING | HEROMOTOCO | 5299.30 | 5291.50 | Rs -8 | FLAT_FORCE_EXIT |
| 56 | LONG | SWING | KALYANKJIL | 647.95 | 639.50 | Rs -84 | STOPLOSS |