docs/paper-trades/v10/2026-07-30_report.md
# v5 Paper Trading Report -- 2026-07-30

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs -753 (-0.08%)** |
| Trades | 76 (L:52 S:24) |
| Win Rate | 47% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | MAZDOCK | 2282.20 | 2329.90 | Rs -191 | STOPLOSS |
| 2 | SHORT | INTRADAY | MOTILALOFS | 841.05 | 845.60 | Rs -46 | STOPLOSS |
| 3 | SHORT | INTRADAY | JIOFIN | 245.75 | 246.99 | Rs -43 | STOPLOSS |
| 4 | SHORT | INTRADAY | CGPOWER | 822.20 | 831.30 | Rs -91 | STOPLOSS |
| 5 | SHORT | INTRADAY | KPITTECH | 591.60 | 586.25 | Rs +64 | STOPLOSS |
| 6 | SHORT | INTRADAY | SHREECEM | 26355.00 | 26495.00 | Rs -140 | STOPLOSS |
| 7 | SHORT | INTRADAY | YESBANK | 22.60 | 22.57 | Rs +12 | TIME_EXIT |
| 8 | SHORT | INTRADAY | ASTRAL | 1473.10 | 1471.50 | Rs +10 | TIME_EXIT |
| 9 | SHORT | INTRADAY | HINDUNILVR | 2101.30 | 2108.20 | Rs -28 | TIME_EXIT |
| 10 | SHORT | INTRADAY | CHOLAFIN | 1772.90 | 1774.50 | Rs -6 | TIME_EXIT |
| 11 | SHORT | INTRADAY | MCX | 2678.80 | 2677.00 | Rs +4 | TIME_EXIT |
| 12 | SHORT | INTRADAY | FEDERALBNK | 354.70 | 353.85 | Rs +18 | TIME_EXIT |
| 13 | SHORT | INTRADAY | HINDPETRO | 388.65 | 388.75 | Rs -2 | TIME_EXIT |
| 14 | SHORT | INTRADAY | UPL | 601.90 | 602.30 | Rs -4 | TIME_EXIT |
| 15 | SHORT | INTRADAY | LUPIN | 2429.30 | 2422.00 | Rs +15 | TIME_EXIT |
| 16 | SHORT | INTRADAY | LGEINDIA | 1508.70 | 1499.60 | Rs +36 | TIME_EXIT |
| 17 | SHORT | INTRADAY | NMDC | 84.97 | 85.13 | Rs -49 | TIME_EXIT |
| 18 | SHORT | INTRADAY | POLYCAB | 8893.00 | 8897.00 | Rs -8 | TIME_EXIT |
| 19 | SHORT | INTRADAY | PREMIERENE | 981.30 | 984.20 | Rs -49 | TIME_EXIT |
| 20 | SHORT | INTRADAY | HDFCLIFE | 546.50 | 547.50 | Rs -27 | TIME_EXIT |
| 21 | SHORT | INTRADAY | BHEL | 402.85 | 402.50 | Rs +14 | TIME_EXIT |
| 22 | SHORT | INTRADAY | ZYDUSLIFE | 1116.50 | 1114.60 | Rs +23 | TIME_EXIT |
| 23 | SHORT | INTRADAY | SRF | 2604.30 | 2603.80 | Rs +2 | TIME_EXIT |
| 24 | SHORT | INTRADAY | TIINDIA | 2691.70 | 2688.60 | Rs +12 | TIME_EXIT |
| 25 | LONG | SWING | M&MFIN | 393.75 | 389.25 | Rs -360 | SIGNAL_FLIP |
| 26 | LONG | SWING | HINDALCO | 962.45 | 967.00 | Rs +127 | SIGNAL_FLIP |
| 27 | LONG | SWING | IRFC | 89.13 | 88.76 | Rs -88 | SIGNAL_FLIP |
| 28 | LONG | SWING | VEDL | 264.50 | 264.65 | Rs +10 | SIGNAL_FLIP |
| 29 | LONG | SWING | SAIL | 170.96 | 169.75 | Rs -104 | SIGNAL_FLIP |
| 30 | LONG | SWING | CHOLAFIN | 1802.90 | 1779.30 | Rs -142 | SIGNAL_FLIP |
| 31 | LONG | SWING | TATASTEEL | 187.27 | 187.49 | Rs +11 | SIGNAL_FLIP |
| 32 | LONG | SWING | PATANJALI | 357.15 | 358.90 | Rs +35 | SIGNAL_FLIP |
| 33 | LONG | SWING | HINDUNILVR | 2117.80 | 2126.00 | Rs +25 | SIGNAL_FLIP |
| 34 | LONG | SWING | TRENT | 3005.20 | 2994.80 | Rs -10 | SIGNAL_FLIP |
| 35 | LONG | SWING | NATIONALUM | 344.70 | 345.30 | Rs +9 | SIGNAL_FLIP |
| 36 | LONG | SWING | EXIDEIND | 435.65 | 442.60 | Rs +70 | STOPLOSS |
| 37 | LONG | SWING | VBL | 447.20 | 451.90 | Rs +254 | SIGNAL_FLIP |
| 38 | LONG | SWING | DIXON | 14275.00 | 14358.00 | Rs +83 | SIGNAL_FLIP |
| 39 | LONG | SWING | NESTLEIND | 1524.40 | 1522.50 | Rs -25 | SIGNAL_FLIP |
| 40 | LONG | SWING | TATACONSUM | 1105.30 | 1101.60 | Rs -59 | SIGNAL_FLIP |
| 41 | LONG | SWING | RECLTD | 375.80 | 375.00 | Rs -27 | SIGNAL_FLIP |
| 42 | LONG | SWING | TORNTPHARM | 4947.00 | 4925.00 | Rs -44 | SIGNAL_FLIP |
| 43 | LONG | SWING | WIPRO | 187.50 | 188.41 | Rs +29 | SIGNAL_FLIP |
| 44 | LONG | SWING | TATAINVEST | 682.70 | 677.05 | Rs -34 | SIGNAL_FLIP |
| 45 | LONG | SWING | ADANIENT | 3052.00 | 3018.60 | Rs -134 | STOPLOSS |
| 46 | LONG | SWING | ALKEM | 5747.50 | 5849.00 | Rs +203 | TARGET |
| 47 | LONG | SWING | HUDCO | 196.50 | 196.23 | Rs -6 | SIGNAL_FLIP |
| 48 | LONG | SWING | JINDALSTEL | 1095.60 | 1091.30 | Rs -60 | SIGNAL_FLIP |
| 49 | LONG | SWING | TATAELXSI | 3716.60 | 3678.40 | Rs -76 | SIGNAL_FLIP |
| 50 | LONG | SWING | PERSISTENT | 5601.80 | 5645.00 | Rs +43 | STOPLOSS |
| 51 | LONG | SWING | RADICO | 4431.90 | 4444.60 | Rs +64 | STOPLOSS |
| 52 | LONG | SWING | TCS | 2490.50 | 2463.70 | Rs -80 | STOPLOSS |
| 53 | LONG | SWING | SWIGGY | 289.48 | 289.00 | Rs -11 | SIGNAL_FLIP |
| 54 | LONG | SWING | MANKIND | 2601.50 | 2588.10 | Rs -54 | SIGNAL_FLIP |
| 55 | LONG | SWING | ALKEM | 5849.00 | 5868.00 | Rs +19 | SIGNAL_FLIP |
| 56 | LONG | SWING | DMART | 3934.00 | 3886.40 | Rs -190 | STOPLOSS |
| 57 | LONG | SWING | WIPRO | 191.14 | 188.55 | Rs -168 | STOPLOSS |
| 58 | LONG | SWING | M&M | 3259.50 | 3259.10 | Rs -2 | SIGNAL_FLIP |
| 59 | LONG | SWING | MOTHERSON | 147.10 | 146.20 | Rs -59 | SIGNAL_FLIP |
| 60 | LONG | SWING | POWERGRID | 285.45 | 285.05 | Rs -17 | SIGNAL_FLIP |
| 61 | LONG | SWING | RADICO | 4445.00 | 4393.90 | Rs -102 | SIGNAL_FLIP |
| 62 | LONG | SWING | M&MFIN | 397.45 | 392.10 | Rs -187 | STOPLOSS |
| 63 | LONG | SWING | HEROMOTOCO | 5292.00 | 5305.80 | Rs +28 | SIGNAL_FLIP |
| 64 | LONG | SWING | ONGC | 243.49 | 241.84 | Rs -54 | SIGNAL_FLIP |
| 65 | LONG | SWING | HCLTECH | 1368.70 | 1361.50 | Rs -36 | SIGNAL_FLIP |
| 66 | LONG | SWING | PERSISTENT | 5637.00 | 5595.80 | Rs -41 | SIGNAL_FLIP |
| 67 | LONG | SWING | GODFRYPHLP | 2122.30 | 2123.00 | Rs +3 | SIGNAL_FLIP |
| 68 | LONG | SWING | EXIDEIND | 444.30 | 452.00 | Rs +239 | STOPLOSS |
| 69 | LONG | SWING | TVSMOTOR | 4075.60 | 4167.30 | Rs +275 | SIGNAL_FLIP |
| 70 | LONG | SWING | NTPC | 343.55 | 344.25 | Rs +10 | SIGNAL_FLIP |
| 71 | LONG | SWING | KALYANKJIL | 628.60 | 642.45 | Rs +180 | STOPLOSS |
| 72 | LONG | SWING | COFORGE | 1740.20 | 1749.40 | Rs +37 | STOPLOSS |
| 73 | LONG | SWING | VOLTAS | 1321.70 | 1325.50 | Rs +23 | SIGNAL_FLIP |
| 74 | LONG | SWING | COALINDIA | 415.20 | 416.65 | Rs +30 | SIGNAL_FLIP |
| 75 | LONG | SWING | GVT&D | 4161.50 | 4182.20 | Rs +41 | SIGNAL_FLIP |
| 76 | LONG | SWING | RELIANCE | 1284.40 | 1292.20 | Rs +47 | SIGNAL_FLIP |